--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/harry-potter-svgrepo-com.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry Potter</title>
   </head>
-  <body>
+  <!-- #f5d6b3 -->
+  <body class="bg-[#b79b48ce]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
