--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/harry-potter-svgrepo-com.svg"
+      href="/harry-potter.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry Potter</title>
