Added ScrollBar Styles Index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry Potter</title>
   </head>
-  <body class="bg-[#b79b48ce]">
+  <body class="bg-[#b79b48ce] scrollbar-thumb-rounded-lg scrollbar-thin scrollbar-thumb-[#F3DEBA] scrollbar-track-slate-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
